<resources>
    <string name="app_name">PostalMailReceiver</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="register_here"><u>Register here</u></string>
    <string name="new_user">New User?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_in_here"><u>Sign In here</u></string>
    <string name="postal_mail_receiver">Postal MaiL Receiver</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postal_mails">Postal Mails</string>
    <string name="send_by">Send by:</string>
    <string name="profile_details">Profile Details</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="user_type">User Type:</string>
    <string name="logout">Logout</string>
    <string name="password">Password:</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number">Phone Number:</string>
    <string name="favourite">Favourite</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="back_button">Back Button</string>
    <string name="mail_detail">Mail Detail</string>
    <string name="image_of_mail">Image of Mail</string>
    <string name="details">Details</string>
    <string name="sender_name">Sender Name:</string>
    <string name="sender_email">Sender Email:</string>
    <string name="date">Date:</string>
    <string name="date_and_time">Date and Time:</string>
    <string name="favourite_mails">Favourite Mails</string>
    <string name="capture_image">Capture Image</string>
    <string name="recent_mails_sent_by_you">Recent Mails sent by you:</string>
    <string name="enter_receiver_s_email_here">Enter receiver\'s Email here.</string>
    <string name="send">Send</string>
    <string name="you_don_t_have_any_favourite_postal_mails">You don\'t have any favourite postal mails.</string>
    <string name="confirm_your_email_address">Confirm your email address</string>
    <string name="we_sent_a_confirmation_email_to">We sent a confirmation email to:</string>
    <string name="check_your_email_and_click_on_the_confirmation_link_to_continue">Check your email and click on the confirmation link to continue.</string>
    <string name="get_started">Get Started</string>
    <string name="send_image">Send Image</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_registered_email">Enter your registered email.</string>
    <string name="enter_you_new_password">Enter you new password.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password_here"><u>Reset Password here</u></string>
    <string name="no_internet">No Internet</string>
    <string name="please_check_your_internet_connection">Please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
</resources>