<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLogin"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/brown"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

                <EditText
                    android:layout_marginTop="30dp"
                    android:id="@+id/etEmail"
                    android:hint="@string/enter_email"
                    android:padding="10dp"
                    android:textColorHint="@color/brown"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/button_design"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:autofillHints="" />

            <EditText
                android:layout_marginTop="20dp"
                android:background="@drawable/button_design"
                android:padding="10dp"
                android:hint="@string/enter_password"
                android:textColorHint="@color/brown"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:id="@+id/etPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:autofillHints="" />

        <Button
            android:elevation="10dp"
            android:background="@drawable/button_design"
            android:layout_gravity="center"
            android:id="@+id/btnLogin"
            android:text="@string/submit"
            android:paddingHorizontal="70dp"
            android:layout_marginTop="50dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/new_user"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvRegisterHere"
                android:text="@string/register_here"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textColor="@color/brown"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>